# rezolus

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Dockerfile  README.md  REVIEWING.md  TOMORROW.md  build.rs  config.toml  dashboard.json  install.sh  plan.md  release.toml  vmlinux.h
.cargo/: audit.toml
.claude/: settings.local.json
.claude/scripts/: post-fmt-check.sh  pre-commit-check.sh
.github/: dependabot.yml
.github/workflows/: cargo.yml  docker.yml  package-deb.yml  package-homebrew.yml  package-rpm.yml  package.yml  pages.yml  release.yml  tag-release.yml  viewer-symlinks.yml
config/: agent.toml  exporter.toml  flight-recorder.toml  hindsight.toml  record.toml  valkey-counters.json  valkey-filter.json
configs/: example.toml  testing.toml
crates/dashboard/: Cargo.toml
crates/dashboard/src/: data.rs  display_wire.rs  events.rs  lib.rs  main.rs  metric_catalog.rs  plot.rs  service_extension.rs  source_kind.rs  sql.rs
crates/dashboard/src/dashboard/: blockio.rs  bridge.rs  category.rs  cgroups.rs  cpu.rs  errors.rs  exceptions.rs  gpu.rs  memory.rs  mod.rs  network.rs  overview.rs  query_explorer.rs  rezolus.rs  scheduler.rs  service.rs  softirq.rs  syscall.rs
crates/dashboard/tests/: cgroup_null_gap.rs  memory.rs  sql_snapshots.rs
crates/dashboard/tests/snapshots/: sql_snapshots__bucket_heatmap_sql_default_view.snap  sql_snapshots__bucket_heatmap_sql_per_source_view.snap  sql_snapshots__cgroup_irate_by_name_per_cgroup_fanout.snap  sql_snapshots__cgroup_irate_total_aggregate_side.snap  sql_snapshots__cgroup_irate_total_individual_with_label_filter.snap  sql_snapshots__cgroup_ratio_by_name_two_metrics.snap  sql_snapshots__cgroup_ratio_total_two_metrics.snap  sql_snapshots__concept_total_multi_arg_mix.snap  sql_snapshots__concept_total_single_arg_sum.snap  sql_snapshots__cpu_pct_by_id_groups_per_cpu.snap  sql_snapshots__cpu_pct_total_divides_by_cpu_cores.snap  sql_snapshots__hist_percentile_series_combined_uses_h2_combine.snap  sql_snapshots__hist_percentile_series_emits_h2_quantile_fanout.snap  sql_snapshots__irate_by_id_source_aware_variant.snap  sql_snapshots__irate_sum_by_id_groups_by_extracted_id.snap  sql_snapshots__irate_total_emits_unpivot_then_irate.snap  sql_snapshots__multi_percentile_kpi_sql_default_quantiles.snap  sql_snapshots__nway_ratio_by_id_three_inputs.snap  sql_snapshots__percentile_kpi_sql_single_quantile.snap  sql_snapshots__quantile_spectrum_sql_default_view.snap  sql_snapshots__quantile_spectrum_sql_per_source_view.snap  sql_snapshots__rate_5m_total_emits_reset_aware_cte.snap  sql_snapshots__ratio_by_id_emits_per_id_rate_pair.snap  sql_snapshots__scale_v_wraps_inner_in_division.snap  sql_snapshots__unpivot_columns_sql_per_label_irate_total.snap
crates/prom-matrix/: Cargo.toml
crates/prom-matrix/src/: lib.rs  native.rs  wasm.rs
crates/prom-matrix/tests/: projection.rs
crates/report-save/: Cargo.toml
crates/report-save/src/: lib.rs
crates/rezolus-webview/: Cargo.toml  README.md  build.sh
crates/rezolus-webview/src/: lib.rs
crates/systeminfo/: Cargo.toml
crates/systeminfo/src/: error.rs  lib.rs  main.rs
crates/systeminfo/src/hwinfo/: cache.rs  cpu.rs  cpufreq.rs  gpu.rs  interrupt.rs  memory.rs  mod.rs  net.rs  node.rs  sched_domain.rs  storage.rs  util.rs
crates/systeminfo/src/summary/: linux.rs  macos.rs  mod.rs
crates/viewer/: Cargo.toml  README.md  build.sh
crates/viewer-sql/: Cargo.toml  build.sh  duckdb.md
crates/viewer-sql/src/: lib.rs  macros.sql
crates/viewer-sql/tests/: macros.rs
crates/viewer/src/: lib.rs  report_save.rs
debian/: .gitignore  90-rezolus-hindsight.preset  90-rezolus-summarize.preset  changelog  control  copyright  gen-changelog.sh  package.sh  rezolus-exporter.service  rezolus-flight-recorder.service  rezolus-hindsight.service  rezolus-summarize.service  rezolus.install  rezolus.postinst  rezolus.prerm  rezolus.rezolus.service  rezolus.service  rules
docker/: .dockerignore  Dockerfile  README.md  entrypoint.sh  rezolus-capture
docs/: DESIGN.md  TODO.md  TODOs.md  amd_gpu_counters.md  architecture.dot  backlog.md  cgroup_io_attribution_proposal.md  external_metrics.md  external_metrics_consumer.md  gpu_amd_smi.md  gpu_hypervisor_tenant_insights.md  how-to-rezolus.md  installation.md  metrics.md  parquet_metadata.md  patterns.md  principles.md  query-patterns-report.md  rate-time-mode-design.md  troubleshooting.md
examples/: gen_ab_fixtures.rs  gen_display_testdata.rs
memmap2/: Cargo.toml
plots/: Cargo.toml  README.md
review/: architecture.md  primer.md  review.md
rpm/: RPM-GPG-KEY-rezolus  rezolus.spec.template  systemd-start.sh  systemd-stop.sh
scripts/: chart_route_sweep.py  check-viewer-symlinks.sh  rezolus-capture  sync-docs-version.sh  viewer_chromium_smoke.sh
site/: index.html
src/: admin.rs  agent.rs  flight_recorder.rs  main.rs  parquet_metadata.rs  recorder.rs  rez_reader.rs  summarize.rs
src/mcp/: mod.rs  (+7 more)
tests/: ab_filename.test.mjs  band_swatches.test.mjs  boxplot_series.test.mjs  cgroup_pattern.test.mjs  combined_ab_injection.test.mjs  compare_bands.test.mjs  compare_display_strip.test.mjs  compare_math.test.mjs  compare_node_filter.test.mjs  data_spectrum_capture.test.mjs  display_binary_decode.test.mjs  display_decimation_gate.test.mjs  display_heatmap_binary.test.mjs  display_intervals.test.mjs  display_plot_eligibility.test.mjs  display_synthetic.sh  display_synthetic.test.mjs  display_tile_cache.test.mjs  event_markers.test.mjs  events_store.test.mjs  heatmap_capture.test.mjs  heatmap_data.test.mjs  heatmap_resolution.test.mjs  integration.rs  interval_bands.test.mjs  live_metadata_refresh.test.mjs  markdown.test.mjs  mcp_cli.rs  metric_browser_timestamp.test.mjs  metric_sort.test.mjs  metric_type_defaults.test.mjs  query_explorer.test.mjs  query_window_cap.test.mjs  scatter_bands.test.mjs  section_cache.test.mjs  sections_api.test.mjs  selection_migration.test.mjs  service_routes.test.mjs  single_chart_editors.test.mjs  source_metric_chart.test.mjs  (+8 more)
xtask/: Cargo.toml
(+907 files in other folders)
