[package]
name = "rezolus"
version = "5.3.2-alpha.0"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "High resolution systems performance telemetry agent"

[[bin]]
name = "rezolus"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
archspec = "0.1.3"
arrow = "54.3.1"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["http2"] }
backtrace = "0.3.75"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
clocksource = "0.8.1"
core_affinity = "0.8.3"
ctrlc = { version = "3.4.7", features = ["termination"] }
futures = "0.3.31"
h2 = "0.4.10"
histogram = "0.11.3"
http = "1.3.1"
humantime = "2.2.0"
include_dir = "0.7.4"
lazy_static = "1.5.0"
libc = "0.2.172"
linkme = "0.3.33"
memmap2 = "0.9.5"
metriken = "0.7.0"
metriken-exposition = "0.12.3"
notify = "8.0.0"
open = "5.3.2"
ouroboros = "0.18.5"
parking_lot = "0.12.4"
parquet = "54.3.1"
plain = "0.2.3"
promql-parser = "0.4"
rayon = "1.10"
reqwest = { version = "0.12.20", default-features = false, features = ["blocking"] }
ringlog = "0.8.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syscall-numbers = "4.0.2"
sysconf = "0.3.4"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
tower = { version = "0.5.2", features = ["tokio"] }
tower-http = { version = "0.6.6", features = ["compression-full", "decompression-full", "fs"] }
tower-livereload = "0.9.6"
walkdir = "2.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
libbpf-rs = { version = "0.25.0" }
libbpf-sys = { version = "1.5.1" }
perf-event2 = "0.7.4"
perf-event-open-sys2 = "5.0.6"
nvml-wrapper = "0.11.0"

[target.'cfg(target_os = "linux")'.build-dependencies]
libbpf-cargo = { version = "0.25.0" }

[features]
developer-mode = []

[profile.bench]
debug = true
lto = true
codegen-units = 1

[profile.release]
debug = true
lto = true
codegen-units = 1

[package.metadata.generate-rpm]
auto_req = "builtin"
assets = [
    { source = "target/release/rezolus", dest = "/usr/bin/", mode = "755" },
    { source = "config/agent.toml", dest = "/etc/rezolus/", mode = "644" },
    { source = "config/exporter.toml", dest = "/etc/rezolus/", mode = "644" },
    { source = "config/hindsight.toml", dest = "/etc/rezolus/", mode = "644" },
    { source = "debian/rezolus.rezolus.service", dest = "/usr/lib/systemd/system/rezolus.service", mode = "644" },
    { source = "debian/rezolus.rezolus-exporter.service", dest = "/usr/lib/systemd/system/rezolus-exporter.service", mode = "644" },
    { source = "debian/rezolus.rezolus-hindsight.service", dest = "/usr/lib/systemd/system/rezolus-hindsight.service", mode = "644" },
]
post_install_script = "rpm/systemd-start.sh"
pre_uninstall_script = "rpm/systemd-stop.sh"
