[workspace]
members = [".", "crates/dashboard", "crates/systeminfo", "crates/viewer"]
exclude = ["xtask"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/iopsystems/rezolus"
homepage = "https://github.com/iopsystems/rezolus"

[workspace.dependencies]
anyhow = "1.0.102"
console_error_panic_hook = "0.1"
histogram = "1.3.1"
libc = "0.2.186"
log = "0.4.29"
metriken = "0.9.2"
metriken-exposition = "0.16.0"
metriken-query = { version = "0.10.2", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
dashboard = { path = "crates/dashboard" }
include_dir = "0.7.4"
walkdir = "2.5.0"
wasm-bindgen = "0.2.120"

[package]
name = "rezolus"
version = "5.11.1-alpha.21"
description = "High resolution systems performance telemetry agent"
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "rezolus"
path = "src/main.rs"

[dependencies]
allan = "0.3.0"
anyhow.workspace = true
archspec = "0.1.3"
arrow = "58.1.0"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["http2"] }
backtrace = "0.3.76"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
clocksource = "1.0.0"
core_affinity = "0.8.3"
ctrlc = { version = "3.5.2", features = ["termination"] }
futures = "0.3.32"
h2 = "0.4.13"
histogram.workspace = true
http = "1.4.0"
humantime = "2.3.0"
include_dir.workspace = true
lazy_static = "1.5.0"
libc.workspace = true
linkme = "0.3.36"
memmap2 = "0.9.10"
metriken.workspace = true
metriken-exposition.workspace = true
metriken-query = { workspace = true, features = ["ingest", "lz4"] }
notify = "8.2.0"
open = "5.3.4"
ouroboros = "0.18.5"
parking_lot = "0.12.5"
parquet = "58.1.0"
prometheus-parse = "0.2.5"
plain = "0.2.3"
rayon = "1.12"
regex = "1"
reqwest = { version = "0.13.3", default-features = false, features = [
    "blocking",
] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
rmp-serde = "1.3.1"
rustfft = "6.4.1"
sha2 = "0.11"
serde.workspace = true
serde_json.workspace = true
syscall-numbers = "4.0.3"
sysconf = "0.3.4"
tempfile = "3.27.0"
thiserror.workspace = true
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
tower = { version = "0.5.3", features = ["tokio"] }
tower-http = { version = "0.6.8", features = [
    "compression-full",
    "decompression-full",
    "fs",
] }
tower-livereload = "0.10.3"
dashboard.workspace = true
systeminfo = { path = "crates/systeminfo" }
walkdir.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libbpf-rs = { version = "0.26.2" }
libbpf-sys = { version = "1.7.0" }
perf-event2 = "0.7.4"
perf-event-open-sys2 = "5.0.6"
nvml-wrapper = "0.12.1"

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.31", features = ["signal", "process"] }
plist = "1.9"

[target.'cfg(target_os = "linux")'.build-dependencies]
libbpf-cargo = { version = "0.26.2" }

[features]
default = []
developer-mode = []

[profile.bench]
debug = true
lto = true
codegen-units = 1

[profile.release]
debug = true
lto = true
codegen-units = 1

# Profile used by crates/viewer/build.sh for the wasm build. Smaller and
# debuginfo-free so the .wasm artifact stays compact when shipped to browsers.
[profile.wasm-release]
inherits = "release"
opt-level = "s"
debug = false

[package.metadata.deb]
maintainer = "IOP Systems <team@iop.systems>"
section = "admin"
priority = "optional"
depends = "$auto"
assets = [
    [
        "target/release/rezolus",
        "usr/bin/",
        "755",
    ],
    [
        "config/agent.toml",
        "etc/rezolus/",
        "644",
    ],
    [
        "config/exporter.toml",
        "etc/rezolus/",
        "644",
    ],
    [
        "config/hindsight.toml",
        "etc/rezolus/",
        "644",
    ],
    [
        "debian/rezolus.rezolus.service",
        "usr/lib/systemd/system/rezolus.service",
        "644",
    ],
    [
        "debian/rezolus.rezolus-exporter.service",
        "usr/lib/systemd/system/rezolus-exporter.service",
        "644",
    ],
    [
        "debian/rezolus.rezolus-hindsight.service",
        "usr/lib/systemd/system/rezolus-hindsight.service",
        "644",
    ],
]

[package.metadata.generate-rpm]
auto_req = "builtin"
assets = [
    { source = "target/release/rezolus", dest = "/usr/bin/", mode = "755" },
    { source = "config/agent.toml", dest = "/etc/rezolus/", mode = "644" },
    { source = "config/exporter.toml", dest = "/etc/rezolus/", mode = "644" },
    { source = "config/hindsight.toml", dest = "/etc/rezolus/", mode = "644" },
    { source = "debian/rezolus.rezolus.service", dest = "/usr/lib/systemd/system/rezolus.service", mode = "644" },
    { source = "debian/rezolus.rezolus-exporter.service", dest = "/usr/lib/systemd/system/rezolus-exporter.service", mode = "644" },
    { source = "debian/rezolus.rezolus-hindsight.service", dest = "/usr/lib/systemd/system/rezolus-hindsight.service", mode = "644" },
]
post_install_script = "rpm/systemd-start.sh"
pre_uninstall_script = "rpm/systemd-stop.sh"
