[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[features]
# Default-on during the Tsdb→DuckDB migration. Off => no metriken-query
# linkage, and the `Tsdb` adapter / Tsdb-flavoured label helpers
# disappear. The DashboardData trait stays unconditional — the SQL
# viewer impls it on its own capture type.
default = ["live-mode"]
live-mode = ["dep:metriken-query"]

[dependencies]
# Dashboard re-exports Tsdb (the legacy in-memory store) so consumers
# that want it can stay on the legacy path. Optional because the
# DuckDB/SQL-only configuration drops it entirely.
metriken-query = { workspace = true, features = ["legacy"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
include_dir.workspace = true

[dev-dependencies]
tempfile = "3"
insta = "1"
# In-memory DuckDB for behavioural tests that run the emitted SQL
# against a fabricated `_src` + `_cgroup_index`. Match the version
# `metriken-query-sql` already builds with so the bundled native lib
# is shared, and pull metriken-query-sql in so `register_all` wires
# up the same `irate_lag` UDF the production backend uses.
duckdb = { version = "1.1.1", features = ["bundled"] }
metriken-query-sql.workspace = true
