[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
include_dir.workspace = true

[dev-dependencies]
tempfile = "3"
insta = "1"
# In-memory DuckDB for behavioural tests that run the emitted SQL
# against a fabricated `_src` + `_cgroup_index`. Match the version
# `metriken-query` already builds with so the bundled native lib
# is shared, and pull metriken-query in so `register_all` wires
# up the same `irate_lag` UDF the production backend uses.
duckdb = { version = "1.1.1", features = ["bundled"] }
metriken-query.workspace = true
