[package]
name = "report-save"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[features]
# Default-on during the Tsdb→DuckDB migration. When off, only the
# embed-selection path is compiled — trim_columns requires a Tsdb to
# resolve the column set, and `metriken-query` is excluded under
# sql-only. Callers gate behind their own `live-mode` and force
# `trim_columns = false`.
default = ["live-mode"]
# `metriken-query/legacy` is required because the live-mode code path
# imports `QueryEngine` and `Tsdb`, both of which only exist under
# that crate's `legacy` feature. Rezolus's own `live-mode` feature
# enables metriken-query with `ingest` (which pulls in `legacy`),
# but a standalone `cargo build -p report-save --features live-mode`
# would otherwise miss it.
live-mode = ["dep:metriken-query", "metriken-query/legacy"]

[dependencies]
arrow = "58.2.0"
bytes = "1"
parquet = { version = "58.2.0", default-features = false, features = ["arrow", "simdutf8", "zstd"] }
tar = { version = "0.4.45", default-features = false }
serde.workspace = true
serde_json.workspace = true
dashboard.workspace = true
metriken-query = { workspace = true, optional = true }
metriken-query-sql.workspace = true
tracing = "0.1"
