# Standalone workspace root: this crate targets wasm32 and has profile and
# dependency settings that differ from the main rezolus workspace.
[workspace]

[package]
name = "rezolus-webview"
version = "0.1.0"
authors = ["Brian Martin <brian@iop.systems>"]
edition = "2024"
homepage = "https://github.com/iopsystems/rezolus"
repository = "https://github.com/iopsystems/rezolus"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
metriken-query = { version = "0.7.0", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
# Force zstd to disable x86 asm for wasm32 builds
zstd-sys = { version = "2", default-features = false, features = ["no_asm"] }

[profile.release]
opt-level = "s"
lto = true
