[package]
name = "systeminfo"
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "System information utility for Rezolus"

[features]
cli = []

[dependencies]
log = "0.4.21"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
walkdir = "2.4.0"


[[bin]]
name = "systeminfo"
path = "src/main.rs"
required-features = ["cli"]
