[package]
name = "systeminfo"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[features]
cli = []

[dependencies]
log.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true


[[bin]]
name = "systeminfo"
path = "src/main.rs"
required-features = ["cli"]
