[package]
name = "systeminfo"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[features]
cli = []

[dependencies]
log.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true

# Used to dlopen the vendor GPU libraries (libnvidia-ml, librocm_smi64) at
# runtime for hardware inventory. Linux-only: these libraries don't exist
# elsewhere, and the GPU collector is gated to Linux.
[target.'cfg(target_os = "linux")'.dependencies]
libloading.workspace = true


[[bin]]
name = "systeminfo"
path = "src/main.rs"
required-features = ["cli"]
