[package]
name = "viewer-sql"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

# Browser-side viewer that drives duckdb-wasm via JS instead of running an
# in-memory PromQL/Tsdb engine in WASM. Sibling to `viewer` (which keeps the
# legacy path); both consume the same `dashboard` crate (the DashboardData
# trait abstracts the metadata source).
[lib]
crate-type = ["cdylib"]

[dependencies]
dashboard.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
console_error_panic_hook.workspace = true
