[package]
name = "viewer"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Workspace declares metriken-query with default-features = false (no SQL
# pipeline, no DuckDB). The WASM viewer needs the in-memory PromQL engine
# + Tsdb under the `legacy` feature.
metriken-query = { workspace = true, features = ["legacy"] }
dashboard.workspace = true
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
console_error_panic_hook.workspace = true
# Force zstd to disable x86 asm for wasm32 builds
zstd-sys = { version = "2", default-features = false, features = ["no_asm"] }
